# QuickManPath

./: CMakeLists.txt  README.md
.github/workflows/: build-windows.yml
inc/: path_tabel.hpp  win_env_utils.hpp
resource/: QuickManPath.rc
src/: main.cpp  path_table.cpp  win_env_utils.cpp
